fix(robustness): 工具/记忆层作用域与编码 + controller 杂项健壮性 / batch G+H (#117)
批次 G（工具/记忆/上下文层）：
- ToolRegistry finally 补 ProjectContextHolder.clear()：此前只清 ToolContextHolder，
  池化回调线程复用会残留上个会话的 projectId/userId 导致记忆作用域串号（A 用户
  偏好写到 B、A 项目记忆漏到 B）。
- FileContextLoader 文件夹扫描保留真实扩展名：此前临时文件固定 ".tmp"，导致
  extractText 按扩展名判为非文本、把文件夹内所有 .txt/.md/.docx 正文丢弃。
- FileContentExtractorService 容错解码：UTF-8 严格解码遇非法字节抛异常，中文
  GBK/GB18030 文件整篇丢失；改为 UTF-8 失败回退 GBK。
- 工具空参防御：search_project_files/write_docx/run_python/browse_url 对 AI 传入的
  null/空参数返回明确错误信息，而非抛 NPE 被吞成 "Error: null"。

批次 H（controller 杂项）：
- ExternalController.getCompanyBasicInfo 二次判空：searchCompany 返回 null 时后续
  解引用 NPE→500，改为返回 404。
- FileController.uploadFile 加 finally 关闭 InputStream：此前每次 multipart/大文件
  上传泄漏一个句柄。
- AiAgentController.rollbackHistory 归属校验：此前 userId 为 null 也执行破坏性截断、
  且不校验会话归属；新增 ProjectAiMessageService.isConversationOwnedBy，非归属者 403。

回归：backend 210 tests 全绿。

Co-authored-by: Claude Fable 5 <noreply@anthropic.com>